--- a/src/Raven.Studio/wwwroot/Content/css/prism.less
+++ b/src/Raven.Studio/wwwroot/Content/css/prism.less
@@ -8,7 +8,6 @@ code[class*="language-"],
 pre[class*="language-"] {
     color: white;
     background: none;
-    text-shadow: 0 -.1em .2em black;
     font-family: Consolas, Monaco, 'Andale Mono', 'Ubuntu Mono', monospace;
     text-align: left;
     white-space: pre;
